--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.12.9"
+    "@astrojs/tailwind": "^6.0.2",
+    "astro": "^5.12.9",
+    "tailwindcss": "^3.4.17"
   }
 }
