--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/cloudflare": "12.6.0",
     "@astrojs/tailwind": "^6.0.2",
     "astro": "^5.12.9",
     "tailwindcss": "^3.4.17"
+  },
+    "devDependencies": {
+    "wrangler": "4.21.x"
   }
 }
